Fix Dockerfiles